--- a/scout/server/blueprints/cases/templates/cases/case.html
+++ b/scout/server/blueprints/cases/templates/cases/case.html
@@ -130,7 +130,7 @@
     </div>
     <ul class="list-group">
       {% for variant in other_causatives %}
-        <li class="list-group-item">
+        <li class="list-group-item" class="col-xs-6">
           <a href="{{ url_for('variants.variant', institute_id=institute._id,
                               case_name=case.display_name, variant_id=variant._id) }}">
             {{ variant.hgnc_symbols|join(', ') }}
@@ -491,11 +491,75 @@
       {% if case.matches %} <!-- case was aready submitted to MatchMaker -->
         Case in MatchMaker
       {% else %} <!-- display option to submit case to MatchMaker -->
-      This case is not yet in <a href="https://www.matchmakerexchange.org/" target="_blank">MatchMaker</a>.
-        <button role="button" class="btn btn-default" onclick="window.location.href='{{url_for('cases.mme_share_case', institute_id=institute._id,
-                           case_name=case.display_name)}}'">Share case
-          <span class="glyphicon glyphicon-align-bottom glyphicon-share" aria-hidden="true"/>
-        </button>
+        <p>This case is not yet in MatchMaker!&nbsp;<a href="#mme_form" data-toggle="collapse">Share it now</a></p>
+        <form id="mme_submit" method="POST" >
+          <div id="mme_form" class="collapse">
+            <div class="d-flex justify-content-between">
+              <div class="flex-1">
+                <ul class="list-group">
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <div data-placement="top" title="hpo">
+                        Include patient gender
+                      </div>
+                      <div>
+                        <input type="checkbox" class="ios8-switch" id="sex" name="sex" value="" checked>
+                        <label for="sex"></label>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <div data-placement="top" title="hpo">
+                        Include HPO terms
+                      </div>
+                      <div>
+                        <input type="checkbox" class="ios8-switch" id="features" name="features" value="" checked>
+                        <label for="features"></label>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <div data-placement="top" title="disorders">
+                        Include OMIM diagnoses
+                      </div>
+                      <div>
+                        <input type="checkbox" class="ios8-switch" id="disorders" name="disorders" value="" checked>
+                        <label for="disorders"></label>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <div data-placement="top" title="genomicfeatures">
+                        Include all variants and genes
+                      </div>
+                      <div>
+                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="" checked>
+                        <label for="genomicfeatures"></label>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <div data-placement="top" title="genomicfeatures">
+                        Include only gene names
+                      </div>
+                      <div>
+                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="">
+                        <label for="genomicfeatures"></label>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div>
+              <button class="btn btn-default form-control" data-toggle="modal">Share to Matchmaker</button>
+            </div>
+          </div>
+        </form>
       {% endif %}
     </div>
   </div>
@@ -752,5 +816,9 @@
         scrollableArea: $(".fixed-panel")[0]
       });
     })
+
+    $('.ios8-switch').change(function(event) {
+      $("#checkbox").prop("checked", true);
+    }
   </script>
 {% endblock %}
