--- a/scout/server/blueprints/cases/templates/cases/case.html
+++ b/scout/server/blueprints/cases/templates/cases/case.html
@@ -492,7 +492,7 @@
         Case in MatchMaker
       {% else %} <!-- display option to submit case to MatchMaker -->
         <p>This case is not yet in MatchMaker!&nbsp;<a href="#mme_form" data-toggle="collapse">Share it now</a></p>
-        <form id="mme_submit" method="POST" >
+        <form id="mme_submit" method="POST" action="{{ url_for('cases.matchmaker_add', institute_id=institute._id, case_name=case.display_name )}}" >
           <div id="mme_form" class="collapse">
             <div class="d-flex justify-content-between">
               <div class="flex-1">
@@ -536,7 +536,7 @@
                         Include all variants and genes
                       </div>
                       <div>
-                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="" checked>
+                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="variants" checked>
                         <label for="genomicfeatures"></label>
                       </div>
                     </div>
@@ -547,7 +547,7 @@
                         Include only gene names
                       </div>
                       <div>
-                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="">
+                        <input type="radio" class="ios8-switch" id="genomicfeatures" name="genomicfeatures" value="genes">
                         <label for="genomicfeatures"></label>
                       </div>
                     </div>
