insert patients to MME from scout case interface

--- a/scout/server/blueprints/cases/templates/cases/case.html
+++ b/scout/server/blueprints/cases/templates/cases/case.html
@@ -503,7 +503,7 @@
                         Include patient gender
                       </div>
                       <div>
-                        <input type="checkbox" class="ios8-switch" id="sex" name="sex" value="" checked>
+                        <input type="checkbox" class="ios8-switch" id="sex" name="sex" checked>
                         <label for="sex"></label>
                       </div>
                     </div>
@@ -514,7 +514,7 @@
                         Include HPO terms
                       </div>
                       <div>
-                        <input type="checkbox" class="ios8-switch" id="features" name="features" value="" checked>
+                        <input type="checkbox" class="ios8-switch" id="features" name="features" checked>
                         <label for="features"></label>
                       </div>
                     </div>
@@ -525,7 +525,7 @@
                         Include OMIM diagnoses
                       </div>
                       <div>
-                        <input type="checkbox" class="ios8-switch" id="disorders" name="disorders" value="" checked>
+                        <input type="checkbox" class="ios8-switch" id="disorders" name="disorders" checked>
                         <label for="disorders"></label>
                       </div>
                     </div>
@@ -556,7 +556,7 @@
               </div>
             </div>
             <div>
-              <button class="btn btn-default form-control" data-toggle="modal">Share to Matchmaker</button>
+              <button class="btn btn-default form-control" data-toggle="modal" type="submit">Share to Matchmaker</button>
             </div>
           </div>
         </form>
