--- a/scout/server/blueprints/cases/templates/cases/case.html
+++ b/scout/server/blueprints/cases/templates/cases/case.html
@@ -566,14 +566,34 @@
             </div>
         </form>
         {% if case.mme_submission %}
-        <form id="mme_delete" method="POST" action="{{ url_for('cases.matchmaker_delete', institute_id=institute._id, case_name=case.display_name )}}" >
-          <div>
-            <button class="btn btn-danger form-control" data-toggle="modal" type="submit">Delete case from MatchMaker</button>
-          </div>
+          {{ modal_mme_delete() }}
         {% endif %}
-        <form>
     </div>
   </div>
+{% endmacro %}
+
+{% macro modal_mme_delete() %}
+  <form id="mme_delete" method="POST" action="{{ url_for('cases.matchmaker_delete', institute_id=institute._id, case_name=case.display_name )}}">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-danger form-control" data-toggle="modal" data-target="#mme_delete_confirm">
+    Remove case from MatchMaker
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="mme_delete_confirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          Confirm delete case from Matchmaker?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </div>
+      </div>
+    </div>
+    </div>
+  </form>
 {% endmacro %}
 
 {% macro phenotype_groups_panel() %}
